# pypeline

./: .gitignore  Jenkinsfile  MANIFEST.in  README.rst  bluebild_nufft_img.npy  conda_requirements.txt  install.sh  install_cscs.sh  new_conda_requirements_intel.txt  new_install.sh  new_install_intel.sh  pypeline.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_gpu.sh  test.py
benchmarking/: analysis_bluebild.py  bb_model.py  bluebild_nufft_img.npy  data_gen_utils.py  dobenchmarking.sh  dummy_fastsynthesis.py  dummy_synthesis.py  generate_bb_output.py  generic_synthesizer.py  lofar_bootes_nufft3.py  lofar_bootes_ps.py  lofar_bootes_ps_timing_timestep20.txt  lofar_bootes_ss.py  lofar_nufft.py  lofar_ss.py  other_utils.py  plot_residual.py  psf.py  qscript.sh  quick_plotter.py  read_bb_fits.py  slurm-34431275.out  small_exp_test.py  test_bluebild.py  test_customfunc.py  test_fastsynthesizer.py  test_matrixmult.py  test_nufft_ss_sizing.py  test_parallel_synthesis.py  test_synthesizer.py  timing.py  visualize.py
benchmarking/.ipynb_checkpoints/: lofar_nufft-checkpoint.py
conda_environments/: pype-111.yml
custom_matmul/: Makefile  Makefile.gcc  build.sh  dgemm-splat  dgemm.optrpt  zgemm-splat  zgemm-splat.optrpt  zgemm.c  zgemm.optrpt  ztcopy_8.h
doc/: conf.py  index.rst
doc/api/: index.rst  pypeline.core.rst  pypeline.phased_array.beamforming.rst  pypeline.phased_array.bluebild.data_processor.rst  pypeline.phased_array.bluebild.field_synthesizer.fourier_domain.rst  pypeline.phased_array.bluebild.field_synthesizer.rst  pypeline.phased_array.bluebild.field_synthesizer.spatial_domain.rst  pypeline.phased_array.bluebild.gram.rst  pypeline.phased_array.bluebild.imager.fourier_domain.rst  pypeline.phased_array.bluebild.imager.rst  pypeline.phased_array.bluebild.imager.spatial_domain.rst  pypeline.phased_array.bluebild.parameter_estimator.rst  pypeline.phased_array.bluebild.rst  pypeline.phased_array.data_gen.rst  pypeline.phased_array.data_gen.sky.rst  pypeline.phased_array.data_gen.source.rst  pypeline.phased_array.data_gen.statistics.rst  pypeline.phased_array.data_gen.visibility.rst  pypeline.phased_array.instrument.rst  pypeline.phased_array.measurement_set.rst  pypeline.phased_array.rst  pypeline.phased_array.util.io.rst  pypeline.phased_array.util.rst  pypeline.rst  pypeline.util.array.rst  (+4 more)
jenkins/: bb_tb.py  bluebild.sh  build_documentation.sh  data_management.sh  generic_synthesizer.py  imap.py  install.sh  lofar_bootes_nufft3.py  lofar_bootes_nufft3_cpp_data_proc.py  lofar_bootes_nufft_small_fov.py  lofar_bootes_ss.py  monitoring.md  monitoring.py  new_conda_requirements.txt  new_lofar_bootes_nufft3.py  new_lofar_bootes_ss.py  slurm_generic_synthesizer.sh  slurm_install.sh  slurm_lofar_bootes_nufft3.sh  slurm_lofar_bootes_nufft3_cpp_data_proc.sh  slurm_lofar_bootes_nufft_small_fov.sh  slurm_lofar_bootes_ss.sh  slurm_lofar_toothbrush_ps.sh  slurm_monitoring.sh  slurm_profiling  slurm_test_fastsynthesizer.sh  slurm_test_synthesizer.sh  slurm_timing  tts.py
pypeline/: __init__.py  core.py
python/: bluebild_ps_image2_gauss4.fits  bluebild_ps_image_lsq.fits  bluebild_ps_image_std.fits  bluebild_ss_image.fits  bluebild_ss_image1_gauss4.fits  bluebild_ss_image2_gauss4.fits  compare_bb_images.py  data_gen_utils.py  examine_fits_file.py  examine_ms_file.py  lofar_bootes_ps.py  lofar_bootes_ss.py  meerkat.py  timing.py
singularity/: HOWTO  README  new_pypeline.def  new_pypeline_environment.yml  sbatch_new_pypeline.sh
src/: Makefile  build.sh  dgemm-simple  dgemm-simple.c  dgemm-simple.optrpt  dgemm-splat  dgemm-splat-scalar.c  dgemm-splat.c  dgemm-splat.optrpt  dgemm-splat.v1.c  dgemm-splat.v2.c  dgemm.c  dgemm.optrpt  env.sh  otcopy_3.h  otcopy_8.h  python-tester  python-tester.c  zgemm-splat  zgemm-splat.c  zgemm-splat.optrpt  zgemm-vintage.c  zgemm.c  zgemm.optrpt
src/bluebild/: CMakeLists.txt  bluebild_cpp_comp_n_run.sh  pyproject.toml  setup.py
src/bluebild/cmake/: BLUEBILDConfig.cmake  BLUEBILDConfigVersion.cmake  BLUEBILDSharedConfig.cmake  BLUEBILDStaticConfig.cmake  BLUEBILDTargets.cmake
src/bluebild/cmake/modules/: FindMarla.cmake
src/bluebild/include/bluebild/: bluebild.h  bluebild.hpp  config.h.in  context.hpp  errors.h  exceptions.hpp  nufft_3d3.hpp  standard_synthesizer.hpp
src/bluebild/python/: CMakeLists.txt  pybluebild.cpp
src/bluebild/python/bluebild/: __init__.py
src/bluebild/src/: CMakeLists.txt  bluebild_export.h  constants.hpp  context.cpp  context_internal.hpp  eigensolver.cpp  eigensolver.hpp  gram_matrix.cpp  gram_matrix.hpp  intensitiy_field_data.cpp  nufft_3d3.cpp  sensitivity_field_data.cpp  spatial_imfs.cpp  standard_synthesizer.cpp
src/bluebild/src/gpu/: eigensolver_gpu.cpp  eigensolver_gpu.hpp  gram_matrix_gpu.cpp  gram_matrix_gpu.hpp  intensity_field_data_gpu.cpp  intensity_field_data_gpu.hpp  nufft_3d3_gpu.cpp  nufft_3d3_gpu.hpp  sensitivity_field_data_gpu.cpp  sensitivity_field_data_gpu.hpp  standard_synthesizer_gpu.cpp  standard_synthesizer_gpu.hpp
src/bluebild/src/gpu/kernels/: gram.cu  gram.hpp  inv_square.cu  inv_square.hpp  min_diff.cu  min_diff.hpp  reverse.cu  reverse.hpp  standard_synthesizer.cu  standard_synthesizer.hpp
src/bluebild/src/gpu/util/: gpu_blas_api.hpp  gpu_runtime.hpp  gpu_runtime_api.hpp  gpu_util.hpp
src/bluebild/src/host/: blas_api.hpp  eigensolver_host.cpp  eigensolver_host.hpp  gemmexp.cpp  gemmexp.hpp  gram_matrix_host.cpp  gram_matrix_host.hpp  intensity_field_data_host.cpp  intensity_field_data_host.hpp  lapack_api.hpp  marla_floor.hpp  marla_sincos.hpp  nufft_3d3_host.cpp  nufft_3d3_host.hpp  sensitivity_field_data_host.cpp  sensitivity_field_data_host.hpp  spatial_imfs_host.cpp  spatial_imfs_host.hpp  ss_host.cpp  ss_host.hpp  standard_synthesizer_host.cpp  standard_synthesizer_host.hpp
src/bluebild/src/memory/: allocator.hpp  allocator_collection.hpp  buffer.hpp  pool_allocator.hpp  umpire_allocator.hpp
src/bluebild/tests/: CMakeLists.txt  test_lofar.cpp  test_lofar_ss.cpp  test_nufft.cpp
src/bluebild/tests/data/: lofar_ss.json  lofar_ss_32.json  lofar_ss_64.json
(+64 files in other folders)
